# proiect-SCD

./: .gitignore  README.md
SCD/laboratoare/lab2-cor-logic-gate/systemc01/: systemc01.sln
SCD/laboratoare/lab2-cor-logic-gate/systemc01/systemc01/: main.cpp  systemc01.vcxproj  traces.vcd
SCD/laboratoare/lab2-cor-logic-gate/systemc01/systemc01/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  systemc01.lastbuildstate  systemc01_manifest.rc  vc100.idb
SCD/laboratoare/lab4/: main.cpp
SCD/laboratoare/lab6/: main.cpp
SCD/laboratoare/lab7/: exemplu.cpp
app1/: CMakeLists.txt
app1/cfg/: cfg.json
app1/include/: configurator.h  cpu.h  mem.h  router.h  types.h
app1/src/: configurator.cpp  main.cpp  router.cpp
systemC/systemc-2.3.2/src/: CMakeLists.txt
